// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render (serialisation) renders correctly document 1`] = `
"<!doctype html><html><head></head><body><script>function __ssr(){var s=document.currentScript,r=s.previousElementSibling,h=r.parentNode;h.removeChild(s);h.removeChild(r);r.parentNode.attachShadow({mode:f.getAttribute('mode')||'open'}).innerHTML=r.innerHTML;}</script><x-hello><shadowroot><span>Hello, <x-yell><shadowroot>
            <style>.test1,.test2 { font-weight: bold; }</style>
            <span class=\\"test1\\"><slot></slot></span>
          </shadowroot><script>__ssr()</script><slot></slot></x-yell>!<x-yell><shadowroot>
            <style>.test1,.test2 { font-weight: bold; }</style>
            <span class=\\"test1\\"><slot></slot></span>
          </shadowroot><script>__ssr()</script>!</x-yell></span></shadowroot><script>__ssr()</script>World</x-hello></body></html>"
`;

exports[`render (serialisation) renders correctly node 1`] = `
"<x-hello><shadowroot><span>Hello, <x-yell><shadowroot>
            <style>.test1,.test2 { font-weight: bold; }</style>
            <span class=\\"test1\\"><slot></slot></span>
          </shadowroot><script>__ssr()</script><slot></slot></x-yell>!<x-yell><shadowroot>
            <style>.test1,.test2 { font-weight: bold; }</style>
            <span class=\\"test1\\"><slot></slot></span>
          </shadowroot><script>__ssr()</script>!</x-yell></span></shadowroot><script>__ssr()</script>World</x-hello>"
`;
